--- a/colaborar.html
+++ b/colaborar.html
@@ -92,6 +92,9 @@
         </div>
       </div>
     </div>
+       <section class="text-center mt-5">
+        <a href="index.html" class="btn btn-outline-info">Ir para o painel principal</a>
+      </section>
   </main>
   <!-- Rodapé (include) -->
   <div data-include="/assets/partials/footer.html"></div>
