--- a/cookies.html
+++ b/cookies.html
@@ -69,6 +69,9 @@
       <h2 class="h5 mt-4">3. Gerenciamento</h2>
       <p>Você pode recusar cookies opcionais ao acessar o site ou configurando seu navegador.</p>
     </div>
+       <section class="text-center mt-5">
+        <a href="index.html" class="btn btn-outline-info">Ir para o painel principal</a>
+      </section>
   </main>
   
 
