--- a/index.html
+++ b/index.html
@@ -141,7 +141,22 @@
           <h5>Apoiar o Site</h5>
           <p>Contribua com o projeto TPG Online 💙</p>
         </a>
-      </div>
+
+                <!-- Validador de CPF e CNPJ -->
+        <a href="validador-documentos.html" class="feature-btn">
+          <i class="fa-solid fa-id-card"></i>
+          <h5>Validar CPF / CNPJ</h5>
+          <p>Verifique se um CPF ou CNPJ é válido.</p>
+        </a>
+
+        <!-- Calculadora de Juros Compostos -->
+        <a href="juros-compostos.html" class="feature-btn">
+          <i class="fa-solid fa-chart-line"></i>
+          <h5>Juros Compostos</h5>
+          <p>Simule investimentos com valor inicial e aportes mensais.</p>
+        </a>
+
+        </div>
     </div>
   </section>
 
