--- a/privacy.html
+++ b/privacy.html
@@ -77,6 +77,9 @@
     <h2 class="h5 mt-4">6. Contato</h2>
     <p>Se tiver dúvidas, entre em contato pelo e-mail: <strong>gl980053@gmail.com</strong></p>
   </div>
+     <section class="text-center mt-5">
+        <a href="index.html" class="btn btn-outline-info">Ir para o painel principal</a>
+      </section>
 </main>
 
 <!-- Rodapé (include) -->
