--- a/terms.html
+++ b/terms.html
@@ -74,6 +74,9 @@
       <h2 class="h5 mt-4">4. Alterações</h2>
       <p>Podemos modificar estes Termos a qualquer momento sem aviso prévio.</p>
     </div>
+       <section class="text-center mt-5">
+        <a href="index.html" class="btn btn-outline-info">Ir para o painel principal</a>
+      </section>
   </main>
   
 <!-- Rodapé (include) -->
