--- a/calculadora-imc.html
+++ b/calculadora-imc.html
@@ -261,6 +261,10 @@
         Use como referência inicial e, em caso de dúvida, procure um médico ou nutricionista.
       </div>
 
+         <section class="text-center mt-5">
+        <a href="index.html" class="btn btn-outline-info">Ir para o painel principal</a>
+      </section>
+      
     </div>
   </main>
 
