--- a/login.html
+++ b/login.html
@@ -22,8 +22,9 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="assets/css/login.css" />
-  <link rel="stylesheet" href="assets/css/theme.css">
+  <!-- CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/css/theme.css">
 </head>
 
 <body>
@@ -37,7 +38,7 @@
   <!-- Área central do login -->
   <main class="auth-page">
     <div class="auth-container">
-      <h1 class="auth-title">TPG Online</h1>
+      <h1 class="auth-title">Login</h1>
       <p class="auth-subtitle">Entre ou crie sua conta para acessar suas ferramentas.</p>
 
       <div class="tabs">
@@ -65,7 +66,9 @@
         <div id="message" class="message"></div>
       </form>
 
-      <a href="index.html" class="back-link">← Voltar para o site</a>
+         <section class="text-center mt-5">
+        <a href="index.html" class="btn btn-outline-info">← Voltar para o site</a>
+         </section>
     </div>
   </main>
 
