--- a/ncm.html
+++ b/ncm.html
@@ -113,6 +113,9 @@
     <div id="status" class="mt-3" aria-live="polite"></div>
     <div id="results" class="row g-3 mt-2 d-none"></div>
   </div>
+     <section class="text-center mt-5">
+        <a href="index.html" class="btn btn-outline-info">Ir para o painel principal</a>
+      </section>
 </main>
 
  <!-- Rodapé (include) -->
