--- a/qrcode.html
+++ b/qrcode.html
@@ -107,6 +107,9 @@
         <p id="mensagem" class="mt-3 text-secondary">Preencha os campos e gere o QR Code</p>
       </div>
     </div>
+       <section class="text-center mt-5">
+        <a href="index.html" class="btn btn-outline-info">Ir para o painel principal</a>
+      </section>
 
   </div>
 </main>
