--- a/main.html
+++ b/main.html
@@ -171,6 +171,26 @@
           </div>
           <span class="main-card-tag">Comunidade</span>
         </a>
+
+                <!-- Validador de CPF / CNPJ -->
+        <a href="validador-documentos.html" class="main-card">
+          <div>
+            <h5>Validar CPF / CNPJ</h5>
+            <p>Verifique se um CPF ou CNPJ é válido matematicamente.</p>
+          </div>
+          <span class="main-card-tag">Documentos</span>
+        </a>
+
+        <!-- Calculadora de Juros Compostos -->
+        <a href="juros-compostos.html" class="main-card">
+          <div>
+            <h5>Juros Compostos</h5>
+            <p>Simule investimentos com valor inicial e aportes mensais.</p>
+          </div>
+          <span class="main-card-tag">Finanças</span>
+        </a>
+
+
       </div>
 
       <!-- Sessão de "Em breve" -->
