--- a/index.html
+++ b/index.html
@@ -156,6 +156,14 @@
           <p>Simule investimentos com valor inicial e aportes mensais.</p>
         </a>
 
+                <!-- Recibo simples para serviços -->
+        <a href="recibo-simples.html" class="feature-btn">
+          <i class="fa-solid fa-file-lines"></i>
+          <h5>Recibo simples</h5>
+          <p>Gere e imprima um recibo simples para serviços prestados.</p>
+        </a>
+
+
         </div>
     </div>
   </section>
