--- a/main.html
+++ b/main.html
@@ -190,6 +190,16 @@
           <span class="main-card-tag">Finanças</span>
         </a>
 
+                <!-- Recibo simples para serviços -->
+        <a href="recibo-simples.html" class="main-card">
+          <div>
+            <h5>Recibo simples</h5>
+            <p>Gere e imprima um recibo simples para serviços prestados.</p>
+          </div>
+          <span class="main-card-tag">Documentos</span>
+        </a>
+
+        
 
       </div>
 
