--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
           </ul>
           <div class='d-flex gap-2 flex-wrap mb-2'>
             <a class='btn btn-primary btn-lg' href='login.html'>Entrar ou criar acesso</a>
-            <a class='btn btn-outline-light btn-lg' href='notes.html'>Ver bloco de notas</a>
-            <a class='btn btn-outline-light btn-lg' href='main.html'>Area logada</a>
+
+              <a class="btn btn-outline-light btn-lg" href="#features">
+                Usar ferramentas sem login
+              </a>
           </div>
           <div class='hero-extra-links'>
             <a href='cnpj.html'>Consultar CNPJ</a> -
