--- a/index.html
+++ b/index.html
@@ -46,127 +46,200 @@
   <!-- ============================================================= -->
 
   <!-- Hero -->
-  <header class='hero section'>
-    <div class='container'>
-      <div class='row align-items-center g-4'>
-        <div class='col-12 col-lg-6'>
-          <p class='text-info text-uppercase small fw-semibold mb-2'>Produtividade no TPG</p>
-          <h1 class='display-5 fw-bold mb-3'>Ferramentas gratuitas e um bloco de notas so seu</h1>
-          <p class='lead mb-3'>
-            Consulte CNPJ, CEP, NCM, gere utilitarios e mantenha suas notas pessoais salvas na nuvem.
-          </p>
-          <ul class='hero-checklist mb-4'>
-            <li>Acesso rapido a consultas essenciais</li>
-            <li>Crie um login gratuito e salve lembretes coloridos</li>
-            <li>Suas notas ficam sincronizadas em qualquer dispositivo</li>
-          </ul>
-          <div class='d-flex gap-2 flex-wrap mb-2'>
-            <a class='btn btn-primary btn-lg' href='login.html'>Entrar ou criar acesso</a>
-
-              <a class="btn btn-outline-light btn-lg" href="#features">
-                Usar ferramentas sem login
-              </a>
-          </div>
-          <div class='hero-extra-links'>
-            <a href='cnpj.html'>Consultar CNPJ</a> -
-            <a href='cep.html'>Consultar CEP</a> -
-            <a href='ncm.html'>Consultar NCM</a> -
-            <a href='fipe.html'>Tabela FIPE</a> -
-            <a href='qrcode.html'>Gerar QR Code</a> -
-            <a href='calculadora-imc.html'>Calculadora IMC</a>
+  <header class="hero section">
+    <div class="container">
+      <div class="row justify-content-center mb-4">
+        <div class="col-12">
+          <div class="announce-banner">
+            <div>
+              <p class="badge text-bg-info text-dark rounded-pill mb-2">Novo</p>
+              <h3 class="h4 fw-bold mb-1">Gerador de Anúncio para WhatsApp</h3>
+              <p class="mb-0 text-muted-2 small">Cole o link do produto e receba um texto pronto com preço formatado e benefícios.</p>
+            </div>
+            <div class="d-flex flex-column flex-sm-row gap-2 align-items-sm-center">
+              <a class="btn btn-primary" href="gerador-anuncio-whatsapp.html">Usar agora</a>
+            </div>
           </div>
         </div>
-        <div class='col-12 col-lg-6'>
-          <div class='hero-promo'>
-            <p class='promo-badge'>Novo recurso</p>
-            <h3 class='fw-bold text-white mb-2'>Bloco de notas pessoal</h3>
-            <p class='text-muted mb-3'>Escreva ideias, tarefas e lembretes e volte quando quiser. Nada se perde.</p>
-            <ul class='promo-list mb-4'>
+      </div>
+
+      <div class="row align-items-center g-4">
+        <div class="col-12 col-lg-6">
+          <p class="text-info text-uppercase small fw-semibold mb-2">Produtividade no TPG</p>
+          <h1 class="display-6 fw-bold mb-2">Ferramentas gratuitas e bloco de notas</h1>
+          <p class="lead mb-3">
+            Consulte documentos, gere utilitários e salve notas rápidas na nuvem.
+          </p>
+          <ul class="hero-checklist mb-3">
+            <li>Consultas essenciais sem complicação</li>
+            <li>Notas coloridas sincronizadas em qualquer aparelho</li>
+          </ul>
+          <div class="d-flex gap-2 flex-wrap mb-2">
+            <a class="btn btn-primary btn-lg" href="login.html">Entrar ou criar acesso</a>
+            <a class="btn btn-outline-light btn-lg" href="#features">Usar ferramentas sem login</a>
+          </div>
+          <div class="hero-extra-links">
+            <a href="cnpj.html">Consultar CNPJ</a> -
+            <a href="cep.html">Consultar CEP</a> -
+            <a href="ncm.html">Consultar NCM</a> -
+            <a href="fipe.html">Tabela FIPE</a> -
+            <a href="qrcode.html">Gerar QR Code</a> -
+            <a href="calculadora-imc.html">Calculadora IMC</a>
+          </div>
+        </div>
+        <div class="col-12 col-lg-6">
+          <div class="hero-promo">
+            <p class="promo-badge">Novo recurso</p>
+            <h3 class="fw-bold text-white mb-2">Bloco de notas pessoal</h3>
+            <p class="text-muted mb-3">Escreva ideias, tarefas e lembretes e volte quando quiser. Nada se perde.</p>
+            <ul class="promo-list mb-4">
               <li>Escolha cores diferentes para cada nota</li>
               <li>Edite, exclua e sincronize em segundos</li>
               <li>Sem mensalidade e com acesso seguro</li>
             </ul>
-            <a class='btn btn-info w-100 mb-3' href='login.html'>Quero criar meu login</a>
-            <div class='promo-note-preview'>
-              <p class='promo-note-title mb-1'>Checklist do dia</p>
-              <p class='promo-note-content mb-0'>
+            <a class="btn btn-info w-100 mb-3" href="login.html">Quero criar meu login</a>
+            <div class="promo-note-preview">
+              <p class="promo-note-title mb-1">Checklist do dia</p>
+              <p class="promo-note-content mb-0">
                 - Atualizar cadastro dos clientes
                 - Conferir notas fiscais
                 - Enviar proposta comercial
               </p>
-              <span class='promo-note-meta small'>Salva automaticamente na sua conta</span>
+              <span class="promo-note-meta small">Salva automaticamente na sua conta</span>
             </div>
           </div>
         </div>
       </div>
     </div>
   </header>
+
   <!-- Seção de Ferramentas -->
   <section id="features" class="section py-5">
     <div class="container text-center">
-      <h2 class="text-info fw-bold mb-4">Explore o TPG Online ⚡</h2>
-      <p class="text-muted mb-5">Clique em uma das ferramentas abaixo para começar</p>
+      <h2 class="text-info fw-bold mb-2">Explore o TPG Online 🚀</h2>
+      <p class="text-muted mb-4 small">Clique em uma das ferramentas abaixo para começar</p>
 
-      <div class="features-grid">
-        <a href="cnpj.html" class="feature-btn">
-          <i class="fa-solid fa-building"></i>
-          <h5>Consultar CNPJ</h5>
-          <p>Informações completas sobre empresas.</p>
-        </a>
-
-        <a href="cep.html" class="feature-btn">
-          <i class="fa-solid fa-location-dot"></i>
-          <h5>Consultar CEP</h5>
-          <p>Descubra endereços e localidades.</p>
-        </a>
-
-        <a href="ncm.html" class="feature-btn">
-          <i class="fa-solid fa-barcode"></i>
-          <h5>Consultar NCM</h5>
-          <p>Classificação fiscal de produtos.</p>
-        </a>
-
-        <a href="fipe.html" class="feature-btn">
-          <i class="fa-solid fa-car"></i>
-          <h5>Tabela FIPE</h5>
-          <p>Valores atualizados de veículos.</p>
-        </a>
-
-        <a href="qrcode.html" class="feature-btn">
-          <i class="fa-solid fa-qrcode"></i>
-          <h5>Gerar QR Code</h5>
-          <p>Crie QR Codes personalizados.</p>
-        </a>
-
-        <a href="colaborar.html" class="feature-btn">
-          <i class="fa-solid fa-hand-holding-dollar"></i>
-          <h5>Apoiar o Site</h5>
-          <p>Contribua com o projeto TPG Online 💙</p>
-        </a>
-
-                <!-- Validador de CPF e CNPJ -->
-        <a href="validador-documentos.html" class="feature-btn">
-          <i class="fa-solid fa-id-card"></i>
-          <h5>Validar CPF / CNPJ</h5>
-          <p>Verifique se um CPF ou CNPJ é válido.</p>
-        </a>
-
-        <!-- Calculadora de Juros Compostos -->
-        <a href="juros-compostos.html" class="feature-btn">
-          <i class="fa-solid fa-chart-line"></i>
-          <h5>Juros Compostos</h5>
-          <p>Simule investimentos com valor inicial e aportes mensais.</p>
-        </a>
-
-                <!-- Recibo simples para serviços -->
-        <a href="recibo-simples.html" class="feature-btn">
-          <i class="fa-solid fa-file-lines"></i>
-          <h5>Recibo simples</h5>
-          <p>Gere e imprima um recibo simples para serviços prestados.</p>
-        </a>
-
-
+      <div class="row g-3 mb-4 text-start promo-cards">
+        <div class="col-12 col-lg-4">
+          <div class="feature-card-box">
+            <div class="d-flex align-items-center mb-2">
+              <span class="badge text-bg-info text-dark me-2">Novo</span>
+              <span class="text-muted-2 small">WhatsApp</span>
+            </div>
+            <h5 class="fw-semibold mb-2">Gerador de Anúncio</h5>
+            <p class="text-muted-2 small mb-3">Texto pronto com benefícios, preço formatado e link clicável.</p>
+            <a class="btn btn-primary w-100" href="gerador-anuncio-whatsapp.html">Abrir ferramenta</a>
+          </div>
         </div>
+        <div class="col-12 col-lg-4">
+          <div class="feature-card-box">
+            <div class="d-flex align-items-center mb-2">
+              <span class="badge text-bg-secondary bg-opacity-50 me-2">Consulta</span>
+              <span class="text-muted-2 small">Empresas</span>
+            </div>
+            <h5 class="fw-semibold mb-2">Consultar CNPJ</h5>
+            <p class="text-muted-2 small mb-3">Dados completos de cadastro e situação da empresa.</p>
+            <a class="btn btn-outline-light w-100" href="cnpj.html">Consultar CNPJ</a>
+          </div>
+        </div>
+        <div class="col-12 col-lg-4">
+          <div class="feature-card-box">
+            <div class="d-flex align-items-center mb-2">
+              <span class="badge text-bg-secondary bg-opacity-50 me-2">Consulta</span>
+              <span class="text-muted-2 small">Endereço</span>
+            </div>
+            <h5 class="fw-semibold mb-2">Consultar CEP</h5>
+            <p class="text-muted-2 small mb-3">Endereço formatado, cidade/UF e CEP pronto para copiar.</p>
+            <a class="btn btn-outline-light w-100" href="cep.html">Consultar CEP</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="row g-3 text-start promo-cards">
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="feature-card-box">
+            <div class="d-flex align-items-center mb-2">
+              <span class="badge text-bg-secondary bg-opacity-50 me-2">Consulta</span>
+              <span class="text-muted-2 small">Produtos</span>
+            </div>
+            <h5 class="fw-semibold mb-2">Consultar NCM</h5>
+            <p class="text-muted-2 small mb-3">Classificação fiscal de produtos.</p>
+            <a class="btn btn-outline-light w-100" href="ncm.html">Consultar NCM</a>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="feature-card-box">
+            <div class="d-flex align-items-center mb-2">
+              <span class="badge text-bg-secondary bg-opacity-50 me-2">Consulta</span>
+              <span class="text-muted-2 small">Veículos</span>
+            </div>
+            <h5 class="fw-semibold mb-2">Tabela FIPE</h5>
+            <p class="text-muted-2 small mb-3">Valores atualizados de veículos.</p>
+            <a class="btn btn-outline-light w-100" href="fipe.html">Abrir FIPE</a>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="feature-card-box">
+            <div class="d-flex align-items-center mb-2">
+              <span class="badge text-bg-secondary bg-opacity-50 me-2">Gerar</span>
+              <span class="text-muted-2 small">QR Code</span>
+            </div>
+            <h5 class="fw-semibold mb-2">Gerar QR Code</h5>
+            <p class="text-muted-2 small mb-3">Crie QR Codes personalizados.</p>
+            <a class="btn btn-outline-light w-100" href="qrcode.html">Gerar QR Code</a>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="feature-card-box">
+            <div class="d-flex align-items-center mb-2">
+              <span class="badge text-bg-secondary bg-opacity-50 me-2">Suporte</span>
+              <span class="text-muted-2 small">TPG</span>
+            </div>
+            <h5 class="fw-semibold mb-2">Apoiar o Site</h5>
+            <p class="text-muted-2 small mb-3">Contribua com o projeto TPG Online ❤️</p>
+            <a class="btn btn-outline-light w-100" href="colaborar.html">Apoiar o site</a>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="feature-card-box">
+            <div class="d-flex align-items-center mb-2">
+              <span class="badge text-bg-secondary bg-opacity-50 me-2">Validar</span>
+              <span class="text-muted-2 small">Documentos</span>
+            </div>
+            <h5 class="fw-semibold mb-2">Validar CPF / CNPJ</h5>
+            <p class="text-muted-2 small mb-3">Verifique se um CPF ou CNPJ é válido.</p>
+            <a class="btn btn-outline-light w-100" href="validador-documentos.html">Validar documento</a>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="feature-card-box">
+            <div class="d-flex align-items-center mb-2">
+              <span class="badge text-bg-secondary bg-opacity-50 me-2">Calcular</span>
+              <span class="text-muted-2 small">Investimentos</span>
+            </div>
+            <h5 class="fw-semibold mb-2">Juros Compostos</h5>
+            <p class="text-muted-2 small mb-3">Simule investimentos com valor inicial e aportes mensais.</p>
+            <a class="btn btn-outline-light w-100" href="juros-compostos.html">Simular juros</a>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="feature-card-box">
+            <div class="d-flex align-items-center mb-2">
+              <span class="badge text-bg-secondary bg-opacity-50 me-2">Gerar</span>
+              <span class="text-muted-2 small">Serviços</span>
+            </div>
+            <h5 class="fw-semibold mb-2">Recibo simples</h5>
+            <p class="text-muted-2 small mb-3">Gere e imprima um recibo simples para serviços prestados.</p>
+            <a class="btn btn-outline-light w-100" href="recibo-simples.html">Criar recibo</a>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -176,10 +249,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   <script src="assets/js/check-session.js" defer></script>
   <script src="assets/js/includes.js" defer></script>
-  
 
-</body>
-</html>
   <script>
     window.dataLayer = window.dataLayer || [];
     window.dataLayer.push({
@@ -198,3 +268,5 @@
       });
     };
   </script>
+</body>
+</html>
