--- a/main.html
+++ b/main.html
@@ -199,7 +199,14 @@
           <span class="main-card-tag">Documentos</span>
         </a>
 
-        
+                 <!-- Gerador de Anúncio -->
+        <a href="gerador-anuncio-whatsapp.html" class="main-card">
+          <div>
+            <h5>Gerador de Anúncio</h5>
+            <p>Texto pronto com benefícios, preço formatado e link clicável.</p>
+          </div>
+          <span class="main-card-tag">Gerar</span>
+        </a>
 
       </div>
 
